Bug 515760 - "[faceted search]: attachment display is clipped" - fix gnomestripe [r=david.ascher a=blocking-thunderbird3]

--- a/mail/themes/gnomestripe/mail/glodaFacetView.css
+++ b/mail/themes/gnomestripe/mail/glodaFacetView.css
@@ -1,1 +1,7 @@
 @import url("chrome://messenger/content/glodaFacetView.css");
+
+.message-attachment-icon {
+  width: 12px;
+  height: 12px;
+  background: url("chrome://messenger/skin/icons/attachment-col.png") transparent no-repeat center right;
+}
